# aimu

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
aimu/: __init__.py  aisuite.py  display.py  hf.py  history.py  memory.py  models.py  ollama.py  paths.py  prompts.py  tools.py
aimu/agents/: __init__.py  _agentic_view.py  _as_tool.py  _loop.py  _tool_loop.py  agent.py  agentic_client.py  base.py  base_agent.py  chain.py  evaluator.py  orchestrator_agent.py  parallel.py  router.py  simple_agent.py  skill_agent.py  workflow.py  workflow_agent.py
aimu/aio/: __init__.py  _base.py  _mcp_client.py  _model_client.py  _tool_loop.py  agent.py  agentic_client.py  audio.py  diffusion.py  embedding.py  fallback.py  image.py  orchestrator_agent.py  run_handle.py  scheduler.py  skill_agent.py  speech.py  transcription.py
aimu/evals/: __init__.py  benchmark.py  deepeval.py  deepeval_scorer.py
aimu/memory/: __init__.py  __main__.py  base.py  document_mcp.py  document_store.py  mcp.py  semantic_store.py  store.py
aimu/models/: __init__.py  _audio_output.py  _chat_state.py  _defaults.py  _hf_device.py  _image_output.py  _images.py  _streaming.py  _thinking.py  audio_client.py  base.py  base_client.py  core.py  embedding_client.py  fallback.py  image_client.py  model_client.py  models.py  speech_client.py  transcription_client.py
aimu/prompts/: __init__.py  catalog.py  classification.py  mcp.py  tuner.py  tuning.py
aimu/rag/: __init__.py  pipeline.py  rerank.py  splitter.py
aimu/sessions/: __init__.py  base.py  memory.py  tinydb.py
aimu/skills/: __init__.py  authoring.py  manager.py  mcp.py  skill.py
aimu/tools/: __init__.py  approval.py  builtin.py  client.py  context.py  decorator.py  mcp.py  mcp_format.py  servers.py
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  examples.md  index.md
docs/explanation/: a2a-vs-mcp.md  agents-vs-workflows.md  architecture.md  async-design.md  design-principles.md  index.md  streamchunk-model.md  system-message-lifecycle.md  thinking-and-context.md  tool-integration.md
docs/how-to/: add-custom-tool.md  add-new-model.md  add-new-provider.md  benchmark-models.md  browse-and-submit-forms.md  build-orchestrator.md  build-personal-assistant.md  cancel-a-run.md  connect-agents-a2a.md  gate-tool-calls.md  generate-audio.md  generate-images.md  generate-speech.md  handle-audio-input.md  handle-vision.md  index.md  integrate-deepeval.md  iterative-image-refinement.md  iterative-text-refinement.md  persist-conversations.md  plan-execute-evaluate.md  spawn-subagents.md  stream-output.md  switch-providers.md  transcribe-audio.md  tune-prompts.md  use-async.md  use-document-memory.md  use-embeddings.md  use-mcp-tools.md  use-rag.md  use-semantic-memory.md  use-sessions.md  use-skills.md  use-structured-output.md  using-llms-inside-tools.md
docs/reference/: cli.md  env-vars.md  index.md  model-matrix.md  provider-matrix.md  stream-phases.md
docs/tutorials/: 01-getting-started.md  02-first-agent-with-tools.md  03-workflows.md  04-streaming.md  04-vision-and-streaming.md  05-vision-and-audio.md  index.md
examples/: README.md  index.html
examples/image-refinement/: README.md  _hotdog_common.py  hotdog_agent.py  hotdog_anneal.py  hotdog_evaluator.py  hotdog_img2img.py  hotdog_loop.py
examples/news-summarizer/: README.md  news_summarizer.py
examples/personal-assistant/: README.md  _assistant_common.py  assistant.py  web_assistant.py  web_channel.py
examples/skills/: README.md
explanation/: index.html
how-to/: index.html
notebooks/: 01 - Model Client - Ollama.ipynb  01 - Model Client.ipynb  01-model-client.html  01-model-client.qmd  02 - Conversations.ipynb  02 - MCP Tools.ipynb  02 - Vision.ipynb  02-conversations.html  02-conversations.qmd  03 - Prompt Management.ipynb  03 - Prompts and Catalog.ipynb  03 - Prompts.ipynb  03 - Structured Output.ipynb  03 - Tools.ipynb  03-structured-output.html  03-structured-output.qmd  04 - Conversation History.ipynb  04 - Conversation Memory.ipynb  04 - Prompt Management.ipynb  04 - Prompt Tuning.ipynb  04 - Vision.ipynb  04-vision.html  04-vision.qmd  05 - Audio Input.ipynb  05 - Conversations.ipynb  05 - Memory Store.ipynb  05 - Memory.ipynb  05 - Prompt Tuning.ipynb  05-audio-input.html  05-audio-input.qmd  06 - Agents.ipynb  06 - Conversations.ipynb  06 - Memory.ipynb  06 - Tools.ipynb  06-tools.html  06-tools.qmd  07 - Agent Skills.ipynb  07 - Agents.ipynb  07 - Memory.ipynb  07-agents.html  (+87 more)
reference/: index.html
scripts/: _hotdog_common.py  epic_agent.py  epic_anneal.py  epic_climbing.py  epic_evaluator.py  epic_loop.py  hotdog_agent.py  hotdog_anneal.py  hotdog_climbing.py  hotdog_evaluator.py  hotdog_img2img.py  hotdog_loop.py  hotdog_loop_climbing.py  hotdog_workflow.py  hotdog_workflow_climbing.py  news_summarizer.py
search/: search_index.json
streamlit/: chatbot_example.py
tests/: conftest.py  echo_server.py  helpers.py  helpers_aio.py  mcp_test_server.py  test_a2a.py  test_adhoc_model.py  test_agent_messages.py  test_agents.py  test_aio_a2a.py  test_aio_agents.py  test_aio_assistant_exports.py  test_aio_audio_api.py  test_aio_cancellation.py  test_aio_channels.py  test_aio_checkpointing.py  test_aio_diffusion_api.py  test_aio_embeddings_api.py  test_aio_fallback_api.py  test_aio_image_api.py  test_aio_model_client_base_url.py  test_aio_models.py  test_aio_models_api.py  test_aio_resilience_api.py  test_aio_scheduler.py  test_aio_skill_authoring.py  test_aio_speech_api.py  test_aio_structured_api.py  test_aio_subagent_tools.py  test_aio_sync_tool_bridge.py  test_aio_tool_approval.py  test_aio_tool_context.py  test_aio_tools.py  test_aio_usage_api.py  test_aio_web_channel.py  test_aio_workflow_parallel.py  test_anthropic_caching.py  test_audio.py  test_audio_api.py  test_audio_input.py  (+59 more)
tutorials/: index.html
web/: gradio_chatbot.py  gradio_chatbot_basic.py  streamlit_chatbot.py  streamlit_chatbot_basic.py
(+244 files in other folders)
