[project]
name = "aimu"
version = "0.3.2"
description = "A Python package containing tools for working with various language models and AI services."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

dependencies = [
    "sqlalchemy",
    "chromadb",
    "fastmcp",
    "nest_asyncio",
    "streamlit",
    "gradio",
    "watchdog",
    "tinydb",
    "requests",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]
notebooks = [
    "ipykernel",
    "ipywidgets",
]
hf = [
    "torch",
    "transformers",
    "torchvision", # required for gemma 4 e4b
    "accelerate",
    "sentencepiece",
    "mistral-common", # required for Mistral-Small-3.2 model
    "kernels", # required for GPT-OSS
    "bitsandbytes", # for models that require quantization before loading (e.g. Magistral)
    # Image generation via HuggingFace diffusers (HuggingFaceImageClient)
    "diffusers>=0.30",
    "safetensors",
    "Pillow",
]
ollama = [
    "ollama",
]
anthropic = [
    "anthropic>=0.50.0",
]
openai_compat = [
    "openai>=1.0.0",
]
llamacpp = [
    "llama-cpp-python",
]
google = [
    # Google Gemini image generation (Nano Banana — GeminiImageClient)
    "google-genai>=1.0",
    "Pillow",
]
deepeval = [
    "deepeval",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
all = ["aimu[hf,ollama,anthropic,openai_compat,llamacpp,google,deepeval]"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aimu*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
