[project]
name = "aimu"
version = "0.9.0"
description = "AI Modeling Utilities: A Python package containing support for working with numerous AI models and services."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

dependencies = [
    "sqlalchemy",
    "chromadb",
    "fastmcp",
    "nest_asyncio",
    "streamlit",
    "gradio",
    "watchdog",
    "tinydb",
    "requests",
    "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/saxman/aimu"
Documentation = "https://saxman.github.io/aimu/"
Repository = "https://github.com/saxman/aimu"
Changelog = "https://github.com/saxman/aimu/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]
notebooks = [
    "ipykernel",
    "ipywidgets",
]
hf = [
    "torch",
    "transformers>=5,<6", # catalog targets 5.x models (Qwen 3.6, Gemma 4, GPT-OSS); cap the major to avoid surprise breakage on the next
    "torchvision", # required for gemma 4 e4b
    "accelerate",
    "sentencepiece",
    "mistral-common", # required for Mistral-Small-3.2 model
    "kernels>=0.12,<0.13", # required for GPT-OSS; must match transformers' supported range (it imports kernels at module load, and >=0.13 breaks that import)
    "bitsandbytes", # for models that require quantization before loading (e.g. Magistral)
    # Image generation via HuggingFace diffusers (HuggingFaceImageClient)
    "diffusers>=0.30",
    "safetensors",
    "Pillow",
    # Audio generation output (HuggingFaceAudioClient WAV encoding)
    "soundfile",
    # Local text embeddings (HuggingFaceEmbeddingClient); reads each model's own pooling config
    "sentence-transformers>=3",
]
ollama = [
    "ollama",
]
anthropic = [
    "anthropic>=0.50.0",
]
openai_compat = [
    "openai>=1.0.0",
]
llamacpp = [
    "llama-cpp-python",
]
google = [
    # Google Gemini image generation (Nano Banana — GeminiImageClient)
    "google-genai>=1.0",
    "Pillow",
]
deepeval = [
    "deepeval",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
all = ["aimu[hf,ollama,anthropic,openai_compat,llamacpp,google,deepeval]"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aimu*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  ".",
  "examples/text-refinement",
  "examples/image-refinement",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
